--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         echo "123"
         ls
-        dotnet restore
+        dotnet restore ./lesson1/lesson1
     - name: Build
       run: dotnet build --no-restore
     - name: Test
