--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+env:
+  pathToSln: ./lesson1
+  
 jobs:
   build:
 
@@ -25,7 +27,7 @@ jobs:
         echo "123"
         ls ./lesson1/lesson1
         echo ./*/  
-        dotnet restore ./lesson1
+        dotnet restore $pathToSln
     - name: Build
       run: dotnet build --no-restore
     - name: Test
