--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,6 +29,6 @@ jobs:
         echo ./*/  
         dotnet restore $pathToSln
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build --no-restore $pathToSln
     - name: Test
       run: dotnet test --no-build --verbosity normal
