--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,3 +31,6 @@ jobs:
       run: dotnet build --no-restore $pathToSln   
     - name: Save artifact
       uses: actions/upload-artifact@v3
+      with:
+          name: code-coverage-report
+          path: ./lesson1/lesson1
