--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore $env:pathToSln
     - name: Publish
-      run: dotnet publish $env:pathToSln/lesson1/Server/lesson1.Server.csproj --self-contained true --runtime /p:PublishSingleFile=true linux-x64 --output ./artifacts 
+      run: dotnet publish $env:pathToSln/lesson1/Server/lesson1.Server.csproj --self-contained true --runtime linux-x64 /p:PublishSingleFile=true --output ./artifacts 
     - name: Save artifact
       uses: actions/upload-artifact@v3
       with:
