--- a/lesson1/lesson1/Server/lesson1.Server.csproj
+++ b/lesson1/lesson1/Server/lesson1.Server.csproj
@@ -15,5 +15,7 @@
     <ProjectReference Include="..\Shared\lesson1.Shared.csproj" />
   </ItemGroup>
 
-
+  <PropertyGroup>
+    <PublishSingleFile>true</PublishSingleFile>
+  </PropertyGroup>
 </Project>
