--- a/.github/workflows/dotnet_linux.yml
+++ b/.github/workflows/dotnet_linux.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  pathToSln: ./lesson1
+
 jobs:
   build:
 
@@ -21,8 +24,6 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore ./lesson1
+      run: dotnet restore $pathToSln
     - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet build --no-restore $pathToSln
