--- a/.github/workflows/dotnet_linux.yml
+++ b/.github/workflows/dotnet_linux.yml
@@ -27,3 +27,9 @@ jobs:
       run: dotnet restore $pathToSln
     - name: Build
       run: dotnet build --no-restore $pathToSln
+    - name: Publish
+      run: dotnet publish ./lesson1/lesson1/Server/lesson1.Server.csproj --output ./artifacts
+    - uses: actions/upload-artifact@v3
+      with: 
+        name: BlazorArtifact
+        path: ./artifacts
