--- a/.github/workflows/dotnet_linux.yml
+++ b/.github/workflows/dotnet_linux.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build
       run: dotnet build --no-restore $pathToSln
     - name: Publish
-      run: dotnet publish ./lesson1/lesson1/Server/lesson1.Server.csproj --output ./artifacts
+      run: dotnet publish ./lesson1/lesson1/Server/lesson1.Server.csproj --self-contained true --runtime linux-x64 --output ./artifacts
     - uses: actions/upload-artifact@v3
       with: 
         name: BlazorArtifact
